docs/0.13/_sources/api/gammapy.spectrum.SpectrumDatasetOnOff.rst.txt
SpectrumDatasetOnOff
====================

.. currentmodule:: gammapy.spectrum

.. autoclass:: SpectrumDatasetOnOff
   :show-inheritance:

   .. rubric:: Attributes Summary

   .. autosummary::

      ~SpectrumDatasetOnOff.alpha
      ~SpectrumDatasetOnOff.background
      ~SpectrumDatasetOnOff.data_shape
      ~SpectrumDatasetOnOff.energy_range
      ~SpectrumDatasetOnOff.excess
      ~SpectrumDatasetOnOff.likelihood_type
      ~SpectrumDatasetOnOff.mask
      ~SpectrumDatasetOnOff.model
      ~SpectrumDatasetOnOff.parameters

   .. rubric:: Methods Summary

   .. autosummary::

      ~SpectrumDatasetOnOff.copy
      ~SpectrumDatasetOnOff.fake
      ~SpectrumDatasetOnOff.from_ogip_files
      ~SpectrumDatasetOnOff.likelihood
      ~SpectrumDatasetOnOff.likelihood_per_bin
      ~SpectrumDatasetOnOff.npred
      ~SpectrumDatasetOnOff.npred_sig
      ~SpectrumDatasetOnOff.peek
      ~SpectrumDatasetOnOff.plot_counts
      ~SpectrumDatasetOnOff.plot_fit
      ~SpectrumDatasetOnOff.plot_residuals
      ~SpectrumDatasetOnOff.read
      ~SpectrumDatasetOnOff.residuals
      ~SpectrumDatasetOnOff.to_ogip_files

   .. rubric:: Attributes Documentation

   .. autoattribute:: alpha
   .. autoattribute:: background
   .. autoattribute:: data_shape
   .. autoattribute:: energy_range
   .. autoattribute:: excess
   .. autoattribute:: likelihood_type
   .. autoattribute:: mask
   .. autoattribute:: model
   .. autoattribute:: parameters

   .. rubric:: Methods Documentation

   .. automethod:: copy
   .. automethod:: fake
   .. automethod:: from_ogip_files
   .. automethod:: likelihood
   .. automethod:: likelihood_per_bin
   .. automethod:: npred
   .. automethod:: npred_sig
   .. automethod:: peek
   .. automethod:: plot_counts
   .. automethod:: plot_fit
   .. automethod:: plot_residuals
   .. automethod:: read
   .. automethod:: residuals
   .. automethod:: to_ogip_files
